<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hp.at</groupId>
	<artifactId>vautotest</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<dependencies>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>2.47.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.47.0</version>
		</dependency>
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib-nodep</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>net.sf.json-lib</groupId>
			<artifactId>json-lib</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.8.3</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ezmorph</groupId>
			<artifactId>ezmorph</artifactId>
			<version>1.0.6</version>
		</dependency>
		<dependency>
			<groupId>com.sikulix</groupId>
			<artifactId>sikulixapi</artifactId>
			<version>1.1.0</version>
		</dependency>
		<!-- <dependency>
			<groupId>com.hp.ecs.at</groupId>
			<artifactId>secureshell</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.hp.ecs.at</groupId>
			<artifactId>powershell</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.hp.ecs.at</groupId>
			<artifactId>restfulwebservice</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency> -->
		<dependency>
			<groupId>restclient</groupId>
			<artifactId>restclient</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/ext-deps/restfulwebservice-0.0.1-SNAPSHOT-jar-with-dependencies.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>powershell</groupId>
			<artifactId>powershell</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/ext-deps/powershell-0.0.1-SNAPSHOT-jar-with-dependencies.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>secureshell</groupId>
			<artifactId>secureshell</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/ext-deps/secureshell-0.0.1-SNAPSHOT-jar-with-dependencies.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.oracle</groupId>
			<artifactId>ojdbc14</artifactId>
			<version>10.2.0.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.9.10</version>
		</dependency>
	</dependencies>
	<properties>
		<maven.build.timestamp.format>yyyy-MM-dd_HH-mm-ss</maven.build.timestamp.format>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mavenbuildts>${maven.build.timestamp}</mavenbuildts>
		<mavensurefirereports>surefirereport</mavensurefirereports>
		<surefiredetails>${project.basedir}/${mavensurefirereports}/build_${mavenbuildts}/details</surefiredetails>
		<surefireoverall>${project.basedir}/${mavensurefirereports}/build_${mavenbuildts}/overall</surefireoverall>
		<my.forkCount>1</my.forkCount>
		<my.skipSurefireReport>false</my.skipSurefireReport>
		<my.disableXmlReport>false</my.disableXmlReport>
		<my.redirectTestOutputToFile>true</my.redirectTestOutputToFile>
		<my.reporttitle>Testing Report</my.reporttitle>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.7</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.shared</groupId>
						<artifactId>maven-filtering</artifactId>
						<version>3.0.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/classes</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/src/main/resources</directory>
								</resource>
								<resource>
									<directory>${basedir}/src/main/resources</directory>
									<includes>
										<include>**/*.properties</include>
									</includes>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19</version>
				<configuration>
					<!--<reportsDirectory>${mavensurefirereports}</reportsDirectory> -->
					<forkCount>${my.forkCount}</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx256m -XX:MaxPermSize=32m</argLine>
					<parallel>classes</parallel>
					<threadCount>1</threadCount>
					<perCoreThreadCount>false</perCoreThreadCount>
					<testFailureIgnore>true</testFailureIgnore>
					<disableXmlReport>${my.disableXmlReport}</disableXmlReport>
					<reportsDirectory>${surefiredetails}</reportsDirectory>
					<redirectTestOutputToFile>${my.redirectTestOutputToFile}</redirectTestOutputToFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.19</version>
				<configuration>
					<reportsDirectories>
						<reportsDirectory>${surefiredetails}</reportsDirectory>
					</reportsDirectories>
					<outputName>${my.reporttitle}</outputName>
					<outputDirectory>${surefireoverall}</outputDirectory>
					<linkXRef>false</linkXRef>
					<showSuccess>true</showSuccess>
					<aggregate>false</aggregate>
					<skipSurefireReport>${my.skipSurefireReport}</skipSurefireReport>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>nexus</id>
			<name>nexus</name>
			<url>http://c9t16879.itcs.hpecorp.net:8080/nexus/content/groups/public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>interval:10</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Internal Releases</name>
			<url>http://c9t16879.itcs.hpecorp.net:8080/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Internal Snapshots</name>
			<url>http://c9t16879.itcs.hpecorp.net:8080/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	<name>vautotest</name>
	<description></description>
</project>